--- a/src/main/frontend/themes/Utiles/styles.css
+++ b/src/main/frontend/themes/Utiles/styles.css
@@ -1,30 +1,52 @@
 @import url('./main-layout.css');
-@import url('./views/proyectos-view.css');
-@import url('./views/encuestadores-view.css');
-@import url('./views/useradmin-view.css');    html {
-      --lumo-shade-5pct: rgba(33, 33, 33, 0.05);
-      --lumo-shade-10pct: rgba(33, 33, 33, 0.1);
-      --lumo-shade-20pct: rgba(33, 33, 33, 0.2);
-      --lumo-shade-30pct: rgba(33, 33, 33, 0.3);
-      --lumo-shade-40pct: rgba(33, 33, 33, 0.4);
-      --lumo-shade-50pct: rgba(33, 33, 33, 0.5);
-      --lumo-shade-60pct: rgba(33, 33, 33, 0.6);
-      --lumo-shade-70pct: rgba(33, 33, 33, 0.7);
-      --lumo-shade-80pct: rgba(33, 33, 33, 0.8);
-      --lumo-shade-90pct: rgba(33, 33, 33, 0.9);
-      --lumo-primary-color-50pct: rgba(235, 89, 5, 0.5);
-      --lumo-primary-color-10pct: rgba(235, 89, 5, 0.1);
-      --lumo-error-color-50pct: rgba(231, 24, 24, 0.5);
-      --lumo-error-color-10pct: rgba(231, 24, 24, 0.1);
-      --lumo-success-color-50pct: rgba(62, 229, 170, 0.5);
-      --lumo-success-color-10pct: rgba(62, 229, 170, 0.1);
-      --lumo-shade: hsl(0, 0%, 13%);
-      --lumo-primary-color: hsl(22, 96%, 47%);
-      --lumo-primary-text-color: hsl(22, 100%, 42%);
-      --lumo-error-color: hsl(0, 81%, 50%);
-      --lumo-error-text-color: hsl(0, 86%, 45%);
-      --lumo-success-color: hsl(159, 76%, 57%);
-      --lumo-success-contrast-color: hsl(159, 29%, 10%);
-      --lumo-success-text-color: hsl(159, 61%, 40%);
 
-    }
+@import url('./views/proyectos-view.css');
+
+@import url('./views/encuestadores-view.css');
+
+@import url('./views/useradmin-view.css');
+
+html {
+	--lumo-shade-5pct: rgba(33, 33, 33, 0.05);
+	--lumo-shade-10pct: rgba(33, 33, 33, 0.1);
+	--lumo-shade-20pct: rgba(33, 33, 33, 0.2);
+	--lumo-shade-30pct: rgba(33, 33, 33, 0.3);
+	--lumo-shade-40pct: rgba(33, 33, 33, 0.4);
+	--lumo-shade-50pct: rgba(33, 33, 33, 0.5);
+	--lumo-shade-60pct: rgba(33, 33, 33, 0.6);
+	--lumo-shade-70pct: rgba(33, 33, 33, 0.7);
+	--lumo-shade-80pct: rgba(33, 33, 33, 0.8);
+	--lumo-shade-90pct: rgba(33, 33, 33, 0.9);
+	--lumo-primary-color-50pct: rgba(235, 89, 5, 0.5);
+	--lumo-primary-color-10pct: rgba(235, 89, 5, 0.1);
+	--lumo-error-color-50pct: rgba(231, 24, 24, 0.5);
+	--lumo-error-color-10pct: rgba(231, 24, 24, 0.1);
+	--lumo-success-color-50pct: rgba(62, 229, 170, 0.5);
+	--lumo-success-color-10pct: rgba(62, 229, 170, 0.1);
+	--lumo-shade: hsl(0, 0%, 13%);
+	--lumo-primary-color: hsl(22, 96%, 47%);
+	--lumo-primary-text-color: hsl(22, 100%, 42%);
+	--lumo-error-color: hsl(0, 81%, 50%);
+	--lumo-error-text-color: hsl(0, 86%, 45%);
+	--lumo-success-color: hsl(159, 76%, 57%);
+	--lumo-success-contrast-color: hsl(159, 29%, 10%);
+	--lumo-success-text-color: hsl(159, 61%, 40%);
+
+	/* Color base de la app  de testing 
+  --lumo-base-color: #e8f5e9;           
+  --lumo-body-text-color: #1b5e20;     
+
+  
+  --lumo-primary-color: #2e7d32;       
+  --lumo-primary-text-color: #ffffff;  
+  
+  
+  --lumo-success-color: #388e3c;
+  --lumo-error-color: #66bb6a;         
+  --lumo-warning-color: #81c784;
+
+  
+  --lumo-link-color: #1b5e20;
+
+*/
+}
